added sample error calc code and updated README file

--- a/holo/fes_no_force/analysis/get_wham_bias.ipynb
+++ b/holo/fes_no_force/analysis/get_wham_bias.ipynb
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -849,8 +849,7 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -858,8 +857,228 @@
     },
     "tags": []
    },
+   "source": [
+    "# Sample code to compute error bar by bootstrapping\n",
+    "## Generate bootstraps\n",
+    "### Distrubute data (cvs and ntraj biases per traj) into NB blocks and generate 100 bootstraps at random with replacement "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "## adapted from PLUMED tutorial: https://www.plumed.org/doc-v2.9/user-doc/html/masterclass-21-3.html\n",
+    "## github: https://github.com/plumed/masterclass-21-3.git\n",
+    "for key in concat_cvs_bias:\n",
+    "    NB=15 # number of blocks\n",
+    "    bw=0.15\n",
+    "    bb_cv = concat_cvs_bias[key]\n",
+    "    bb = bb_cv[:,4:]\n",
+    "    cat_cv = bb_cv[:,:4]\n",
+    "    print(\"=====shapes of cvs and bias matrices======\")\n",
+    "    print(cat_cv.shape,bb.shape)\n",
+    "    print(\"=====bias matrix=======\")\n",
+    "    traj_frame_bias = bb.reshape(20,-1,20) #20 refers to the total number of runs \n",
+    "    print(traj_frame_bias.shape)\n",
+    "    traj_block_frame_bias=traj_frame_bias.reshape(20,NB,-1,20)\n",
+    "    print(traj_block_frame_bias.shape)\n",
+    "    print(\"======cv matrix=======\")\n",
+    "    traj_frame_cv = cat_cv.reshape(20,-1,4)\n",
+    "    print(traj_frame_cv.shape)\n",
+    "    traj_block_frame_cv = traj_frame_cv.reshape(20,NB,-1,4)\n",
+    "    print(traj_block_frame_cv.shape)\n",
+    "\n",
+    "    for i in range(100):\n",
+    "        idx=np.random.choice(NB,NB)  #get index permutation at random\n",
+    "        boot_bias = traj_block_frame_bias[:,idx,:,:]\n",
+    "        resamp_bias = boot_bias.reshape((-1,20))\n",
+    "        w=wham(resamp_bias,T=kbT, verbose=False)\n",
+    "        weight = np.exp(w[\"logW\"])\n",
+    "        out_wham = w[\"logW\"]*kbT\n",
+    "        boot = traj_block_frame_cv[:,idx,:,:] #get CVs corresponding to selected biases\n",
+    "        time_cvs = boot.reshape(-1,4)\n",
+    "        print(time_cvs.shape)\n",
+    "        time_cvs_bias = np.hstack((time_cvs,out_wham.reshape(-1,1))) #build output array with optimized bias\n",
+    "        print(time_cvs_bias.shape, i)\n",
+    "        filename = f'outputs/COLVAR_BIAS_{key}_boot_{i}.dat'\n",
+    "        head=\" FIELDS time proj ext cmap wham.bias\"\n",
+    "        np.savetxt(filename, time_cvs_bias, delimiter=' ', newline='\\n', header=head, comments='#!', fmt='%.9e') #write out bootstrap"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Run in notebook or terminal to obtain FES of each bootstrap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "bash utils/reweight_boot.sh plumed_boot.dat outputs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Read bootstrap FESs "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "boot_fes_ext_proj = {}\n",
+    "boot_fes_proj_cmap = {}\n",
+    "boot_fes_ext_cmap = {}\n",
+    "\n",
+    "boot_fes_ext = {}\n",
+    "boot_fes_proj = {}\n",
+    "boot_fes_cmap = {}\n",
+    "\n",
+    "for i in np.linspace(0.0,0.0,1):\n",
+    "    if round(i,3) == -0.0:\n",
+    "        key = \"0.0\"\n",
+    "    else:\n",
+    "        key = str(round(i,3))\n",
+    "    boot_fes_ext_proj[key]=[]\n",
+    "    boot_fes_ext[key]=[]\n",
+    "    boot_fes_proj[key]=[]\n",
+    "\n",
+    "    boot_fes_cmap[key] = []\n",
+    "    boot_fes_proj_cmap[key] = []\n",
+    "    boot_fes_ext_cmap[key] = []\n",
+    "    \n",
+    "outprefix=\"outputs/plumed_boot_pn_\"\n",
+    "\n",
+    "file_template = \"_fes_projext_rw.dat\"\n",
+    "for k in boot_fes_ext_proj:\n",
+    "    for b in range(100):\n",
+    "        final_name = f\"{outprefix}{k}/{b}/boot{file_template}\"\n",
+    "        dist = np.genfromtxt(final_name, comments='#',dtype=float)\n",
+    "        boot_fes_ext_proj[k].append(dist)\n",
+    "   \n",
+    "file_template = \"_fes_projcmap_rw.dat\"\n",
+    "for k in boot_fes_proj_cmap:\n",
+    "    for b in range(100):\n",
+    "        final_name = f\"{outprefix}{k}/{b}/boot{file_template}\"\n",
+    "        dist = np.genfromtxt(final_name, comments='#',dtype=float)\n",
+    "        boot_fes_proj_cmap[k].append(dist)\n",
+    "\n",
+    "file_template = \"_fes_extcmap_rw.dat\"\n",
+    "for k in boot_fes_ext_cmap:\n",
+    "    for b in range(100):\n",
+    "        final_name = f\"{outprefix}{k}/{b}/boot{file_template}\"\n",
+    "        dist = np.genfromtxt(final_name, comments='#',dtype=float)\n",
+    "        boot_fes_ext_cmap[k].append(dist)\n",
+    "        \n",
+    "file_template = \"_fes_proj_rw.dat\"\n",
+    "for k in boot_fes_proj:\n",
+    "    for b in range(100):\n",
+    "        final_name = f\"{outprefix}{k}/{b}/boot{file_template}\"\n",
+    "        dist = np.genfromtxt(final_name, comments='#',dtype=float)\n",
+    "        boot_fes_proj[k].append(dist)\n",
+    "        \n",
+    "file_template = \"_fes_ext_rw.dat\"\n",
+    "for k in boot_fes_ext :\n",
+    "    for b in range(100):\n",
+    "        final_name = f\"{outprefix}{k}/{b}/boot{file_template}\"\n",
+    "        dist = np.genfromtxt(final_name, comments='#',dtype=float)\n",
+    "        boot_fes_ext[k].append(dist)\n",
+    "      \n",
+    "file_template = \"_fes_cmap_rw.dat\"\n",
+    "for k in boot_fes_cmap:\n",
+    "    for b in range(100):\n",
+    "        final_name = f\"{outprefix}{k}/{b}/boot{file_template}\"\n",
+    "        dist = np.genfromtxt(final_name, comments='#',dtype=float)\n",
+    "        boot_fes_cmap[k].append(dist)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Compute error via std of bootstraps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fcolors =  cm.jet(np.linspace(0, 1, 100))\n",
+    "\n",
+    "for key in boot_fes_proj:\n",
+    "    runs_proj=boot_fes_proj[key]\n",
+    "    runs_ext=boot_fes_ext[key]\n",
+    "    runs_cmap=boot_fes_cmap[key]\n",
+    "    \n",
+    "    fig, (ax1, ax2, ax3) = plt.subplots(1, 3, figsize=(12,3))\n",
+    "    for i in range(100):\n",
+    "        run_p = runs_proj[i]\n",
+    "        run_e = runs_ext[i]\n",
+    "        run_c = runs_cmap[i]\n",
+    "        \n",
+    "        FEmaxp = np.amax(run_p[:,1][np.isfinite(run_p[:,1])])\n",
+    "        FEp=run_p[:,1]\n",
+    "        FEp[np.isinf(FEp)] = FEmaxp\n",
+    "\n",
+    "        FEmaxe = np.amax(run_e[:,1][np.isfinite(run_e[:,1])])\n",
+    "        FEe=run_e[:,1]\n",
+    "        FEe[np.isinf(FEe)] = FEmaxe\n",
+    "\n",
+    "        FEmaxc = np.amax(run_c[:,1][np.isfinite(run_c[:,1])])\n",
+    "        FEc=run_c[:,1]\n",
+    "        FEc[np.isinf(FEc)] = FEmaxc\n",
+    "        \n",
+    "        ax1.plot(run_p[:,0][2:], FEp[2:], color=fcolors[i])\n",
+    "        ax2.plot(run_e[:,0][5:], FEe[5:], color=fcolors[i])\n",
+    "        ax3.plot(run_c[:,0][2:], FEc[2:], color=fcolors[i])\n",
+    "        \n",
+    "        ax1.set_ylabel(r'$FE\\ (kcal/mol)$', size=14)\n",
+    "        ax1.set_xlabel(r'$proj\\ (\\AA)$',  size=14)\n",
+    "        ax2.set_xlabel(r'$ext\\ (\\AA)$',  size=14) \n",
+    "        ax3.set_xlabel(r'$q\\ (\\AA)$',  size=14) \n",
+    "    \n",
+    "    plt.tick_params(axis='both', labelsize=14, width=2)\n",
+    "    fig.suptitle(F'apo {key}', fontsize=12)\n",
+    "    #fig.savefig(F\"{figure_dir}/fes_proj_rw_forces_plumed_wham.png\", bbox_inches='tight')\n",
+    "    plt.show()\n",
+    "\n",
+    "    boot_FES=np.array(runs_proj)\n",
+    "    mean_FESp = np.mean(boot_FES,axis=0)\n",
+    "    std_FESp = np.std(boot_FES,axis=0,ddof=1)\n",
+    "    np.savetxt(f\"outputs/proj_err_{key}.dat\",std_FESp)\n",
+    "\n",
+    "    boot_FES=np.array(runs_ext)\n",
+    "    mean_FESe = np.mean(boot_FES,axis=0)\n",
+    "    std_FESe = np.std(boot_FES,axis=0,ddof=1)\n",
+    "    np.savetxt(f\"outputs/ext_err_{key}.dat\",std_FESe)\n",
+    "\n",
+    "    boot_FES=np.array(runs_cmap)\n",
+    "    mean_FESc = np.mean(boot_FES,axis=0)\n",
+    "    std_FESc = np.std(boot_FES,axis=0,ddof=1)\n",
+    "\n",
+    "    fig, (ax1, ax2, ax3) = plt.subplots(1, 3, figsize=(12,3))\n",
+    "    \n",
+    "    ax1.errorbar(mean_FESp[:,0][2:][::2], mean_FESp[:,1][2:][::2], std_FESp[:,1][2:][::2], color='k', ecolor='r')\n",
+    "    ax2.errorbar(mean_FESe[:,0][5:][::2], mean_FESe[:,1][5:][::2], std_FESe[:,1][5:][::2], color='k', ecolor='r')\n",
+    "    ax3.errorbar(mean_FESc[:,0][2:], mean_FESc[:,1][2:], std_FESc[:,1][2:], color='k', ecolor='r')\n",
+    "    plt.tick_params(axis='both', labelsize=14, width=2)\n",
+    "    plt.show()\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
